2014-09-03  David Kilzer  <ddkilzer@apple.com>

        REGRESSION (r167325): (null) entry added to Xcode project file when JSBoundFunction.h was removed
        <http://webkit.org/b/136509>

        Reviewed by Daniel Bates.

        * JavaScriptCore.xcodeproj/project.pbxproj: Remove the (null)
        entry left behind when JSBoundFunction.h was removed.

2014-09-03  Joseph Pecoraro  <pecoraro@apple.com>

        Avoid warning if a process does not have access to com.apple.webinspector
        https://bugs.webkit.org/show_bug.cgi?id=136473

        Reviewed by Alexey Proskuryakov.

        Pre-check for access to the mach port to avoid emitting warnings
        in syslog for processes that do not have access.

        * inspector/remote/RemoteInspector.mm:
        (Inspector::canAccessWebInspectorMachPort):
        (Inspector::RemoteInspector::shared):

2014-09-03  Filip Pizlo  <fpizlo@apple.com>

        Temporarily disable call edge profiling. It is causing crashes and I'm still investigating
        them.

        * runtime/Options.h:

2014-09-03  Balazs Kilvady  <kilvadyb@homejinni.com>

        [MIPS] Wrong register usage in LLInt op_catch.
        https://bugs.webkit.org/show_bug.cgi?id=125168

        Reviewed by Geoffrey Garen.

        Fix register usage and add PIC header to all the ops in LLInt.

        * offlineasm/instructions.rb:
        * offlineasm/mips.rb:

2014-09-03  Saam Barati  <saambarati1@gmail.com>

        Create tests for type profiling
        https://bugs.webkit.org/show_bug.cgi?id=136161

        Reviewed by Geoffrey Garen.

        The type profiler is now being tested. These are basic tests that don't 
        check every edge case, but will catch any major failures in the type profiler. 
        These tests cover:
        - The basic, inheritance-based type system in TypeSet.
        - Function return types.
        - Correct merging of types for multiple assignments to one variable.
